# fei-base

./: .gitignore  README.md  fei-base.cabal  hie.yaml  mxnet-base.cabal  stack.yaml
base/: LICENSE  mxnet-base.cabal
base/c-apis/MXNet/Base/: Executor.hs  NDArray.hs  Raw.hs  Symbol.hs  Types.hs
base/c-apis/MXNet/Base/Raw/: Common.chs  DataIter.chs  Executor.chs  NDArray.chs  Symbol.chs
base/c-apis/MXNet/Base/Spec/: HMap.hs  Operator.hs
base/cmdline/: Main.hs
c-apis/: mxnet-c-apis.cabal
c-apis/MXNet/: Base.hs
c-apis/MXNet/Base/: Executor.hs  HMap.hs  NDArray.hs  Operator.hs  ParserUtils.hs  Profiler.hs  Symbol.hs  Tensor.hs  Types.hs
c-apis/MXNet/Base/Raw/: AutoGrad.chs  Common.chs  DataIter.chs  Executor.chs  NDArray.chs  Symbol.chs
c-apis/MXNet/Base/Spec/: HMap.hs  Operator.hs
c-apis/MXNet/Base/Tensor/: Class.hs  Functional.hs
cmdline/: Main.hs  mxnet-op-gen.cabal
operators/: mxnet-ops.cabal
operators/MXNet.1.0.0/Base/Operators/: NDArray.hs  Symbol.hs
ops/1.0/MXNet/Base/: DataIter.hs
ops/1.0/MXNet/Base/Operators/: NDArray.hs  Symbol.hs
ops/1.3/MXNet/Base/: DataIter.hs
ops/1.3/MXNet/Base/Operators/: NDArray.hs  Symbol.hs
ops/1.4/MXNet/Base/: DataIter.hs
ops/1.4/MXNet/Base/Operators/: NDArray.hs  Symbol.hs
ops/1.5/MXNet/Base/: DataIter.hs
ops/1.5/MXNet/Base/Operators/: NDArray.hs  Symbol.hs
ops/1.6/MXNet/Base/: DataIter.hs
ops/1.6/MXNet/Base/Operators/: NDArray.hs  Symbol.hs  Tensor.hs
ops/1.7/MXNet/Base/Operators/: Tensor.hs
ops/1.8/MXNet/Base/: DataIter.hs
ops/1.8/MXNet/Base/Operators/: Tensor.hs  Tensor.hs.bak
ops/1.9/MXNet/Base/: DataIter.hs
ops/1.9/MXNet/Base/Operators/: Tensor.hs
ops/dummy/MXNet/Base/: DataIter.hs
ops/dummy/MXNet/Base/Operators/: Tensor.hs
src/MXNet/: Base.hs
src/MXNet/Base/: AutoGrad.hs  NDArray.hs  NDArray.hs-boot  ParserUtils.hs  Profiler.hs  Raw.hs  Symbol.hs  Tensor.hs  Types.hs
src/MXNet/Base/Core/: Enum.hs  Spec.hs
src/MXNet/Base/Raw/: AutoGrad.chs  Common.chs  Executor.chs  NDArray.chs  Profiler.chs
src/MXNet/Base/Spec/: Operator.hs
src/MXNet/Base/Tensor/: Class.hs  Functional.hs
src/MXNet/NN/: Initializer.hs  LrScheduler.hs  Module.hs  Optimizer.hs  Types.hs
src/MXNet/NN/DataIter/: Conduit.hs
src/MXNet/NN/Module/: Basic.hs  Class.hs  Conv.hs
