cabal-version:       2.2
name:                fei-base
version:             0.4
synopsis:            FFI to MXNet
description:         This package provides a FFI wrap of MXNet, including c-apis and symbol/array/executor operations.
homepage:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jiasen Wu
maintainer:          jiasenwu@hotmail.com
copyright:           2018 Jiasen Wu
category:            Machine Learning, AI
build-type:          Simple
extra-source-files:  README.md

Flag mxnet_1_6 {
  Description: With MXNet 1.6.x operators
  Default: False
}

Flag mxnet_1_5 {
  Description: With MXNet 1.5.x operators
  Default: False
}

Flag mxnet_1_4 {
  Description: With MXNet 1.4.x operators
  Default: False
}

Flag mxnet_1_3 {
  Description: With MXNet 1.3.x operators
  Default: False
}

Flag mxnet_1_0 {
  Description: With MXNet 1.0.x operators
  Default: False
}

library
  hs-source-dirs:      c-apis
  if flag(mxnet_1_0) {
      hs-source-dirs:  ops/1.0
  }
  elif flag(mxnet_1_3) {
      hs-source-dirs:  ops/1.3
  }
  elif flag(mxnet_1_4) {
      hs-source-dirs:  ops/1.4
  }
  elif flag(mxnet_1_5) {
      hs-source-dirs:  ops/1.5
  }
  elif flag(mxnet_1_6) {
      hs-source-dirs:  ops/1.6
  }
  build-depends:       base >= 4.7 && < 5,
                       tuple-ops == 0.0.0.4,
                       deepseq,
                       constraints,
                       lens,
                       repa,
                       vector,
                       attoparsec,
                       rio,
                       store
  default-language:    Haskell2010
  build-tool-depends:  c2hs:c2hs
  default-extensions:  FlexibleContexts,
                       GADTs,
                       StandaloneDeriving,
                       DeriveGeneric,
                       GeneralizedNewtypeDeriving,
                       ExplicitForAll,
                       DataKinds,
                       TypeFamilies,
                       OverloadedLabels,
                       OverloadedStrings,
                       LambdaCase,
                       MultiWayIf,
                       DoAndIfThenElse,
                       NoImplicitPrelude,
                       TupleSections,
                       ScopedTypeVariables
  exposed-modules:     MXNet.Base,
                       MXNet.Base.Raw,
                       MXNet.Base.Types,
                       MXNet.Base.ParserUtils,
                       MXNet.Base.Symbol,
                       MXNet.Base.NDArray,
                       MXNet.Base.Tensor,
                       MXNet.Base.Executor,
                       MXNet.Base.Spec.Operator,
                       MXNet.Base.Spec.HMap
  if flag(mxnet_1_0) || flag(mxnet_1_3) || flag(mxnet_1_4) || flag(mxnet_1_5) || flag(mxnet_1_6) {
    exposed-modules:   MXNet.Base.Operators.Tensor,
                       MXNet.Base.DataIter
  }
  other-modules:       MXNet.Base.Raw.Common,
                       MXNet.Base.Raw.NDArray,
                       MXNet.Base.Raw.Symbol,
                       MXNet.Base.Raw.Executor,
                       MXNet.Base.Raw.DataIter
  extra-libraries:     mxnet

executable mxnet-op-gen
  hs-source-dirs:      cmdline
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       optparse-applicative >= 0.14 && < 0.15,
                       haskell-src-exts >= 1.20,
                       hslogger >= 1.2,
                       tuple-ops == 0.0.0.4,
                       rio,
                       fei-base
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
  extra-libraries:     mxnet

source-repository head
  type:     git
  location: https://github.com/pierric/fei-base
