cabal-version:       2.4
name:                fei-base
version:             1.1.0
synopsis:            FFI to MXNet
description:         This package provides a FFI wrap of MXNet, including c-apis and symbol/array/executor operations.
homepage:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jiasen Wu
maintainer:          jiasenwu@hotmail.com
copyright:           2020 - Jiasen Wu
category:            Machine Learning, AI
build-type:          Simple
extra-source-files:  README.md

Flag mxnet_geq_10600 {
  Description: With MXNet 1.6.x operators
  Default: False
}

Flag mxnet_geq_10700 {
  Description: With MXNet 1.7.x operators
  Default: False
}

Flag dummy {
  Description: no operators
  Default: True
}

Flag use_repa {
  Description: use repa
  Default: False
}

library
  hs-source-dirs:      c-apis
  if flag(mxnet_geq_10600) {
      hs-source-dirs:  ops/1.6
      cpp-options:     -DMXNET_VERSION=10600
  }
  elif flag(mxnet_geq_10700) {
      hs-source-dirs:  ops/1.7
      cpp-options:     -DMXNET_VERSION=10700
  }
  elif flag(dummy) {
      hs-source-dirs:  ops/dummy
  }
  if flag(use_repa) {
      build-depends:   repa
      cpp-options:     -DUSE_REPA
  }
  build-depends:       base >= 4.7 && < 5,
                       tuple-ops == 0.0.0.4,
                       deepseq,
                       constraints,
                       lens,
                       vector,
                       attoparsec,
                       rio,
                       store
  default-language:    Haskell2010
  build-tool-depends:  c2hs:c2hs
  default-extensions:  FlexibleContexts,
                       GADTs,
                       StandaloneDeriving,
                       DeriveGeneric,
                       GeneralizedNewtypeDeriving,
                       ExplicitForAll,
                       DataKinds,
                       TypeFamilies,
                       OverloadedLabels,
                       OverloadedStrings,
                       LambdaCase,
                       MultiWayIf,
                       DoAndIfThenElse,
                       NoImplicitPrelude,
                       TupleSections,
                       ScopedTypeVariables
  exposed-modules:     MXNet.Base,
                       MXNet.Base.Raw,
                       MXNet.Base.Types,
                       MXNet.Base.ParserUtils,
                       MXNet.Base.Symbol,
                       MXNet.Base.NDArray,
                       MXNet.Base.Tensor,
                       MXNet.Base.Executor,
                       MXNet.Base.Spec.Operator,
                       MXNet.Base.Spec.HMap
                       MXNet.Base.Operators.Tensor,
                       MXNet.Base.DataIter
  other-modules:       MXNet.Base.Raw.Common,
                       MXNet.Base.Raw.NDArray,
                       MXNet.Base.Raw.Symbol,
                       MXNet.Base.Raw.Executor,
                       MXNet.Base.Raw.DataIter,
                       MXNet.Base.Tensor.Class,
                       MXNet.Base.Tensor.Functional
  extra-libraries:     mxnet

executable mxnet-op-gen
  hs-source-dirs:      cmdline
  hs-source-dirs:      c-apis
  main-is:             Main.hs
  other-modules:       MXNet.Base.Raw.Common,
                       MXNet.Base.Raw.NDArray,
                       MXNet.Base.Raw.Symbol,
                       MXNet.Base.Raw.Executor,
                       MXNet.Base.Raw.DataIter
  build-depends:       base >= 4.7 && < 5,
                       optparse-applicative >= 0.14 && < 0.16,
                       haskell-src-exts >= 1.22,
                       hslogger >= 1.2,
                       tuple-ops == 0.0.0.4,
                       deepseq,
                       lens,
                       rio
  default-language:    Haskell2010
  build-tool-depends:  c2hs:c2hs
  default-extensions:  FlexibleContexts,
                       StandaloneDeriving,
                       DeriveGeneric,
                       GeneralizedNewtypeDeriving,
                       GADTs,
                       OverloadedStrings,
                       MultiWayIf
  extra-libraries:     mxnet

source-repository head
  type:     git
  location: https://github.com/pierric/fei-base
