name:                mxnet-base
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            
license:             BSD3
license-file:        LICENSE
author:              Jiasen Wu
maintainer:          jiasenwu@hotmail.com
copyright:           2018 Jiasen Wu
category:            Machine Learning, AI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      c-apis
  build-depends:       base >= 4.7 && < 5,
                       c2hs-extra == 0.1.0.1,
                       tuple-ops == 0.0.0.3,
                       vector >= 0.11 && < 0.13,
                       constraints
  default-language:    Haskell2010
  Build-tools:         c2hs
  default-extensions:  FlexibleContexts,
                       GADTs,
                       StandaloneDeriving,
                       DeriveGeneric,
                       GeneralizedNewtypeDeriving
  exposed-modules:     MXNet.Base.Raw,
                       MXNet.Base.Types,
                       MXNet.Base.Symbol,
                       MXNet.Base.NDArray,
                       MXNet.Base.Executor,
                       MXNet.Base.Spec.Operator,
                       MXNet.Base.Spec.HMap
  other-modules:       MXNet.Base.Raw.Common,
                       MXNet.Base.Raw.NDArray,
                       MXNet.Base.Raw.Symbol,
                       MXNet.Base.Raw.Executor
  extra-libraries:     mxnet

executable mxnet-op-gen
  hs-source-dirs:      cmdline
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       optparse-applicative >= 0.14 && < 0.15,
                       haskell-src-exts >= 1.20,
                       hslogger >= 1.2,
                       text >= 1.2.0 && < 1.3,
                       mtl,
                       filepath >= 1.4 && < 1.5,
                       directory >= 1.3 && < 1.4,
                       mxnet-base
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
  extra-libraries:     mxnet
-- executable haskell-mxnet
--   hs-source-dirs:      cmdline
--   main-is:             Main.hs
--   build-depends:       base >= 4.7 && < 5
--   default-language:    Haskell2010
--   extra-libraries:     mxnet

source-repository head
  type:     git
  location: https://github.com/pierric/mxnet-hs
