name:                mxnet-ops
version:             0.1.0.0
-- synopsis:
-- description:
homepage:
license:             BSD3
license-file:        LICENSE
author:              Jiasen Wu
maintainer:          jiasenwu@hotmail.com
copyright:           2018 Jiasen Wu
category:            Machine Learning, AI
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  build-depends:       base >= 4.7 && < 5,
                       mxnet-base
  default-language:    Haskell2010
  extra-libraries:     mxnet
  default-extensions:  ExplicitForAll,
                       DataKinds,
                       TypeFamilies,
                       OverloadedLabels,
                       TupleSections,
                       FlexibleContexts
  exposed-modules:     MXNet.Base.Operators.Symbol,
                       MXNet.Base.Operators.NDArray
  other-modules:

source-repository head
  type:     git
  location: https://github.com/pierric/mxnet-hs
